<resources>
    <string name="app_name">CSI5175</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Shopping Cart</string>
    <string name="title_notifications">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse">Browse</string>
    <string name="title_activity_orderhistory">orderhistory</string>
    <string name="register">Register</string>
    <string name="change">Change</string>

    <string name="email_label">E-mail: </string>
    <string name="password_label">Password: </string>
    <string name="name_label">Name: </string>
    <string name="address_label">Address: </string>
    <string name="phone_label">Phone: </string>

    <string name="login_welcome">Welcome! Please login!</string>
    <string name="register_welcome">Welcome to register!</string>
    <string name="repeat_password">Repeat password: </string>

    <string name="order_history">History Orders: </string>
    <string name="hello_order_history">Welcome. Do you want to check your history order?</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confirm">Confirm</string>
    <string name="check">Check</string>
    <string name="back">Back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>