<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="41dp"
      android:layout_marginBottom="31dp"
      android:text="@string/name_label"
      app:layout_constraintBottom_toTopOf="@+id/textView6"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="43dp"
      android:layout_height="22dp"
      android:layout_marginStart="41dp"
      android:layout_marginBottom="27dp"
      android:text="@string/email_label"
      app:layout_constraintBottom_toTopOf="@+id/textView7"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginBottom="32dp"
      android:text="@string/password_label"
      app:layout_constraintBottom_toTopOf="@+id/textView5"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/register_email_input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="252dp"
      android:layout_marginBottom="5dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toTopOf="@+id/registrer_password_input"
      app:layout_constraintStart_toEndOf="@+id/textView6"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/registrer_password_input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="132dp"
      android:layout_marginBottom="384dp"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/register_repeat_input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="132dp"
      android:layout_marginBottom="332dp"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registrer_password_input"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="118dp"
      android:layout_height="18dp"
      android:text="@string/repeat_password"
      tools:layout_editor_absoluteX="7dp"
      tools:layout_editor_absoluteY="367dp" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="125dp"
      android:layout_marginTop="148dp"
      android:text="@string/register_welcome"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/register_name_input"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="47dp"
      android:layout_marginBottom="4dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toTopOf="@+id/register_email_input"
      app:layout_constraintStart_toEndOf="@+id/textView9" />

  <Button
      android:id="@+id/register_confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="143dp"
      android:layout_marginBottom="230dp"
      android:text="@string/confirm"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/register_back"
      android:layout_width="103dp"
      android:layout_height="49dp"
      android:text="@string/back"
      tools:layout_editor_absoluteX="142dp"
      tools:layout_editor_absoluteY="520dp" />
</androidx.constraintlayout.widget.ConstraintLayout>