<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.csi5175.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productDetails"
            app:destination="@id/productDetails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.csi5175.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_productdetail1"
            app:destination="@id/productdetail1" />
    </fragment>

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.csi5175.ui.browse.browse"
        android:label="fragment_browse"
        tools:layout="@layout/fragment_browse" >
        <action
            android:id="@+id/action_navigation_browse_to_productdetail1"
            app:destination="@id/productdetail1" />
    </fragment>

    <fragment
        android:id="@+id/navhomelist"
        android:name="com.example.csi5175.navhomelist"
        android:label="fragment_navhomelist"
        tools:layout="@layout/fragment_navhomelist" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.csi5175.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >

        <action
            android:id="@+id/action_info_to_namechange"
            app:destination="@id/navigation_namechange" />

        <action
            android:id="@+id/action_info_to_emailchange"
            app:destination="@id/navigation_emailchange" />

        <action
            android:id="@+id/action_info_to_phonechange"
            app:destination="@id/navigation_phonechange" />

        <action
            android:id="@+id/action_info_to_addresschange"
            app:destination="@id/navigation_addresschange" />
        <action
            android:id="@+id/action_navigation_notifications_to_orderhistories"
            app:destination="@id/orderhistories" />
    </fragment>

    <fragment
        android:id="@+id/navigation_namechange"
        android:name="com.example.csi5175.ui.notifications.modify.NameChangeFragment"
        android:label="Change your name"
        tools:layout="@layout/fragment_namechange" >

        <action
            android:id="@+id/action_namechange_to_info"
            app:destination="@id/navigation_notifications" />

    </fragment>

    <fragment
        android:id="@+id/navigation_addresschange"
        android:name="com.example.csi5175.ui.notifications.modify.AddressChangeFragment"
        android:label="Change your address"
        tools:layout="@layout/fragment_addresschange" >

        <action
            android:id="@+id/action_addresschange_to_info"
            app:destination="@id/navigation_notifications" />

    </fragment>

    <fragment
        android:id="@+id/navigation_phonechange"
        android:name="com.example.csi5175.ui.notifications.modify.PhoneChangeFragment"
        android:label="Change your phone"
        tools:layout="@layout/fragment_phonechange" >

        <action
            android:id="@+id/action_phonechange_to_info"
            app:destination="@id/navigation_notifications" />

    </fragment>

    <fragment
        android:id="@+id/navigation_emailchange"
        android:name="com.example.csi5175.ui.notifications.modify.EmailChangeFragment"
        android:label="Change your email"
        tools:layout="@layout/fragment_emailchange" >

        <action
            android:id="@+id/action_emailchange_to_info"
            app:destination="@id/navigation_notifications" />


    </fragment>
    <fragment
        android:id="@+id/orderhistories"
        android:name="com.example.csi5175.orderhistories"
        android:label="fragment_orderhistories"
        tools:layout="@layout/fragment_orderhistories" >
        <action
            android:id="@+id/action_orderhistories_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/productDetails"
        android:name="com.example.csi5175.ProductDetails"
        android:label="fragment_productdetails"
        tools:layout="@layout/fragment_productdetails" />
    <fragment
        android:id="@+id/productdetail1"
        android:name="com.example.csi5175.productdetail1"
        android:label="fragment_productdetail1"
        tools:layout="@layout/fragment_productdetail1" >
        <action
            android:id="@+id/action_productdetail1_to_navigation_browse"
            app:destination="@id/navigation_browse" />
    </fragment>

</navigation>